--- a/css/site1/eteppa1.html
+++ b/css/site1/eteppa1.html
@@ -20,8 +20,8 @@
                 <h2>Cursos</h2>
             </div>
             
-            <li><a href="#">Sobre Nós</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="Sobre.html" id="sobre">Sobre Nós</a></li>
+            <li><a href="Contato.html" id="contato">Contato</a></li>
             <li><a href="#" id="login-link">Login</a></li>
             <div id="login-form" class="hidden">
                 <h2>Login</h2>
